# ai_knowlege_base

./: .env.example  .gitignore  pyproject.toml
app/api/http/: import_server.py  query_server.py
app/api/schema/: import_schema.py  query_schema.py
app/infra/config/: providers.py
app/infra/llm/: providers.py
app/infra/object_storage/: minio_gateway.py
app/infra/persistence/: history_repository.py
app/infra/vector_store/: milvus_gateway.py
app/rag/import_/: config.py  embedding_service.py  enrich_markdown_images.py  entry_service.py  index_service.py  item_name_service.py  pdf_parse_service.py  split_service.py
app/rag/query/: answer_service.py  config.py  embedding_search_service.py  hyde_search_service.py  item_name_confirm_service.py  rerank_service.py  rrf_service.py  web_search_service.py
app/rag_eval/: README.md  __init__.py  dataset.py  metrics.py  runner.py  tester.py
app/resources/html/: chat.html  import.html
app/resources/prompts/: answer_out.prompt  rerank_text_refine.prompt  rewritten_query_and_itemnames.prompt
app/shared/clients/: __init__.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/shared/config/: __init__.py  bailian_mcp_config.py  common.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py  settings_config.py
app/shared/model/: __init__.py  embedding_utils.py  lm_utils.py  reranker_utils.py
app/shared/runtime/: load_prompt.py  logger.py
tests/: 01_test_import_app_invoke.py  02_test_re_image.py  03_test_base64_encode.py  04_test_api_use.py
(+28 files in other folders)
